--- a/.github/workflows/rstats_tweet_fetcher.yml
+++ b/.github/workflows/rstats_tweet_fetcher.yml
@@ -18,7 +18,7 @@ jobs:
         run: Rscript -e "install.packages('rtweet', dependencies= TRUE)"
       - name: Fetch data
         run: |
-          Rscript ./Test Solution 2021/Test_1.R   
+          Rscript ./Test_Solution_2021/Test_1.R   
       - name: Update csv
         run: |
           git config --local user.email "actions@github.com"
